# condoagenda

./: README.md  TODO.md
src/: TODO.md
src/condoagenda-api/: .env.example  .gitignore  BUSINESS_RULES.md  TODO.md  manage.py  pyproject.toml
src/condoagenda-api/apps/core/: admin.py  models.py  services.py
src/condoagenda-api/apps/core/api/: urls.py  (+2 more)
src/condoagenda-api/apps/remimders/: apps.py
src/condoagenda-api/condoagenda/: asgi.py  settings.py  urls.py  wsgi.py
src/condoagenda-bot/: .env.example  .gitignore  TODO.md  pyproject.toml
src/condoagenda-bot/agendabot/api/: depedencies.py  main.py
src/condoagenda-bot/agendabot/cli/: main.py
src/condoagenda-bot/agendabot/modules/evolution_api/: core.py  errors.py  message_upsert_parser.py
src/condoagenda-bot/agendabot/modules/evolution_api/schemas/: message_upsert.py
src/condoagenda-bot/agendabot/modules/whatsapp/: client.py
src/condoagenda-bot/agendabot/modules/workflow/: core.py  orchestrator.py
src/condoagenda-bot/agendabot/modules/workflow/entities/: workflow.py
src/condoagenda-bot/agendabot/modules/workflow/factories/: workflow.py
src/condoagenda-bot/agendabot/modules/workflow/interfaces/: __init__.py  orchestrator_action_handler.py  orchestrator_event_handler.py  output_handler.py  template_message_render.py
src/condoagenda-bot/agendabot/modules/workflow/templates/condoagenda/: service.py  workflow.py
src/condoagenda-bot/tests/: test_workflow_orchestrator.py
src/condoagenda-bot/tests/unit/parser/: test_core.py
src/condoagenda-bot/tests/unit/parser/evolution_api/: test_evolution_api.py
(+13 files in other folders)
